--- a/RecipeBook/src/Readme
+++ b/RecipeBook/src/Readme
@@ -1,3 +1,3 @@
 All files that need to be in src folder of your App
 
-Note: Delete the App.js fike and replace it with Main.js
+Note: Delete the App.js fike and replace it with Main.js and similarly any other files with same name(Replace them)
