--- a/RecipeBook/Readme
+++ b/RecipeBook/Readme
@@ -8,3 +8,5 @@ Packages to be added :
   npm i bootstrap
   npm i bootstrap-icons
   npm i firebase
+
+Ps : I'll be adding the feature to edit recipes next
