--- a/RecipeBook/Readme
+++ b/RecipeBook/Readme
@@ -20,4 +20,4 @@ Packages to be added :
 21/2/24 : Added the cuisine category for recipes and also a dropdown style nav so that user can search for a recipe 
 based on the cusine.
 
-Ps : I'll be adding adding a search bar to look for recipes based on the recipe name in future update.
+Ps : Please wait for future quality of life updates
